2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Work around bugs in Atmel's xml files.
	* xml/Device.dtd: Change order of nrww and rww bootloader attributes.

2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Add code to handle the boot loader information.
	* xml/Device.dtd: Add bootloader element.

2004-06-23  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py (gather_io_info): New function.
	(dump_ioregs): Implement dumping ioregisters.
	* xml/Device.dtd: Move ioreg elements into ioregisters element.
	Add access and init attributes to bit_field element.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Fixes to allow validation of generated file.
	* xml/Device.dtd: Ditto.
	* xml/Validate.py: New file.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Device.dtd: Fix some syntax errors.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Now dumps header, memory size info and interrupts
	data as well-formed XML.
	* xml/Device.dtd: Change memory info to memory sizes.

2004-06-21  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: New file.
	* xml/Device.dtd: Don't force copyright/license in doc (just use a
	comment).
	Make device name an attribute of device.
	Add memory_info element of device.
	Massage the interrupt and vector elements.

2004-06-20  Theodore A. Roth  <troth@openavr.org>

	* xml: New directory.
	* xml/Device.dtd: New file.

2004-06-04  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (install-data-local): Install version.h file.
	* acconfig.h: New file.
	* config-ml.in: When adding the Multi.tem fragment to the Makefile,
	don't use a variable or the fragment will be added to the version.h
	file instead of the Makefile.
	* configure.in: Generate the version.h config header file.
	* reconf: Run autoheader.

2004-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega8
